# Fastx_Utilities

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Fasta.cpp  Fasta.h  Sequence.cpp  Sequence.h
test/: CMakeLists.txt
test/test_Sequence/: test_constructor.cpp  test_getter.cpp  test_operator.cpp  test_setter.cpp
test/test_SequenceReader/: CMakeLists.txt  test_constructor.cpp  test_getter.cpp  test_setter.cpp
test/test_data/: test_seq.fasta
